core/unpackaged/main/default/objects/EmailMessage/fields/Merge_to_Opp_Activity__c.field-meta.xml
<CustomField>
    <fullName>Merge_to_Opp_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merge to Opp Activity</label>
    <type>Checkbox</type>
</CustomField>