core/unpackaged/main/default/objects/EmailMessage/fields/Merged_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Merged_From_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merged From Lead</label>
    <type>Checkbox</type>
</CustomField>